--- a/STEP1/css/_core_styles.css
+++ b/STEP1/css/_core_styles.css
@@ -12,7 +12,8 @@
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: calc((100vw - 195px)/3);
+	width: calc((100vw - 195px)/3);
+	margin-top: 30px;
 	margin-right: 30px;
 	background-color: white;
 	cursor: pointer;
