--- a/STEP1/sass/_core_styles.sass
+++ b/STEP1/sass/_core_styles.sass
@@ -12,6 +12,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2)
   transition: 0.3s
   width: calc((#{$screen-width} - #{$desktop_padding})/3)
+  margin-top: 30px
   margin-right: 30px
   background-color: white
   &:hover
